tests/ui/nll/issue-21232-partial-init-and-use.classic.stderr
error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/issue-21232-partial-init-and-use.rs:136:5
   |
LL |     s.x = 10;
   |     ^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `s` isn't fully initialized
  --> $DIR/issue-21232-partial-init-and-use.rs:136:5
   |
LL |     let s: S<B>;
   |         - binding declared here but left uninitialized
LL |     s.x = 10;
   |     ^^^^^^^^ `s` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/issue-21232-partial-init-and-use.rs:144:5
   |
LL |     t.0 = 10;
   |     ^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/issue-21232-partial-init-and-use.rs:144:5
   |
LL |     let t: T;
   |         - binding declared here but left uninitialized
LL |     t.0 = 10;
   |     ^^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0382]: assign to part of moved value: `s`
  --> $DIR/issue-21232-partial-init-and-use.rs:153:5
   |
LL |     let mut s: S<B> = S::new();
   |         ----- move occurs because `s` has type `S<Box<u32>>`, which does not implement the `Copy` trait
LL |     drop(s);
   |          - value moved here
LL |     s.x = 10;
   |     ^^^^^^^^ value partially assigned here after move
   |
note: if `S<Box<u32>>` implemented `Clone`, you could clone the value
  --> $DIR/issue-21232-partial-init-and-use.rs:20:1
   |
LL | struct S<Y> {
   | ^^^^^^^^^^^ consider implementing `Clone` for this type
...
LL |     drop(s);
   |          - you could clone this value

error[E0382]: assign to part of moved value: `t`
  --> $DIR/issue-21232-partial-init-and-use.rs:162:5
   |
LL |     let mut t: T = (0, Box::new(0));
   |         ----- move occurs because `t` has type `(u32, Box<u32>)`, which does not implement the `Copy` trait
LL |     drop(t);
   |          - value moved here
LL |     t.0 = 10;
   |     ^^^^^^^^ value partially assigned here after move
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL |     drop(t.clone());
   |           ++++++++

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/issue-21232-partial-init-and-use.rs:170:5
   |
LL |     s.x = 10;
   |     ^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `s` isn't fully initialized
  --> $DIR/issue-21232-partial-init-and-use.rs:170:5
   |
LL |     let s: S<B>;
   |         - binding declared here but left uninitialized
LL |     s.x = 10;
   |     ^^^^^^^^ `s` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/issue-21232-partial-init-and-use.rs:177:5
   |
LL |     t.0 = 10;
   |     ^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/issue-21232-partial-init-and-use.rs:177:5
   |
LL |     let t: T;
   |         - binding declared here but left uninitialized
LL |     t.0 = 10;
   |     ^^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0382]: assign to part of moved value: `s`
  --> $DIR/issue-21232-partial-init-and-use.rs:185:5
   |
LL |     let mut s: S<B> = S::new();
   |         ----- move occurs because `s` has type `S<Box<u32>>`, which does not implement the `Copy` trait
LL |     drop(s);
   |          - value moved here
LL |     s.x = 10;
   |     ^^^^^^^^ value partially assigned here after move
   |
note: if `S<Box<u32>>` implemented `Clone`, you could clone the value
  --> $DIR/issue-21232-partial-init-and-use.rs:20:1
   |
LL | struct S<Y> {
   | ^^^^^^^^^^^ consider implementing `Clone` for this type
...
LL |     drop(s);
   |          - you could clone this value

error[E0382]: assign to part of moved value: `t`
  --> $DIR/issue-21232-partial-init-and-use.rs:193:5
   |
LL |     let mut t: T = (0, Box::new(0));
   |         ----- move occurs because `t` has type `(u32, Box<u32>)`, which does not implement the `Copy` trait
LL |     drop(t);
   |          - value moved here
LL |     t.0 = 10;
   |     ^^^^^^^^ value partially assigned here after move
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL |     drop(t.clone());
   |           ++++++++

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/issue-21232-partial-init-and-use.rs:200:5
   |
LL |     s.x = 10;
   |     ^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `s` isn't fully initialized
  --> $DIR/issue-21232-partial-init-and-use.rs:200:5
   |
LL |     let s: S<Void>;
   |         - binding declared here but left uninitialized
LL |     s.x = 10;
   |     ^^^^^^^^ `s` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/issue-21232-partial-init-and-use.rs:207:5
   |
LL |     t.0 = 10;
   |     ^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/issue-21232-partial-init-and-use.rs:207:5
   |
LL |     let t: Tvoid;
   |         - binding declared here but left uninitialized
LL |     t.0 = 10;
   |     ^^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/issue-21232-partial-init-and-use.rs:223:5
   |
LL |     q.r.f.x = 10;
   |     ^^^^^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `q` isn't fully initialized
  --> $DIR/issue-21232-partial-init-and-use.rs:223:5
   |
LL |     let q: Q<S<B>>;
   |         - binding declared here but left uninitialized
LL |     q.r.f.x = 10;
   |     ^^^^^^^^^^^^ `q.r.f` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/issue-21232-partial-init-and-use.rs:231:5
   |
LL |     q.r.f.0 = 10;
   |     ^^^^^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `q` isn't fully initialized
  --> $DIR/issue-21232-partial-init-and-use.rs:231:5
   |
LL |     let q: Q<T>;
   |         - binding declared here but left uninitialized
LL |     q.r.f.0 = 10;
   |     ^^^^^^^^^^^^ `q.r.f` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0382]: assign to part of moved value: `q.r`
  --> $DIR/issue-21232-partial-init-and-use.rs:240:5
   |
LL |     drop(q.r);
   |          --- value moved here
LL |     q.r.f.x = 10;
   |     ^^^^^^^^^^^^ value partially assigned here after move
   |
   = note: move occurs because `q.r` has type `R<S<Box<u32>>>`, which does not implement the `Copy` trait

error[E0382]: assign to part of moved value: `q.r`
  --> $DIR/issue-21232-partial-init-and-use.rs:249:5
   |
LL |     drop(q.r);
   |          --- value moved here
LL |     q.r.f.0 = 10;
   |     ^^^^^^^^^^^^ value partially assigned here after move
   |
   = note: move occurs because `q.r` has type `R<(u32, Box<u32>)>`, which does not implement the `Copy` trait

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/issue-21232-partial-init-and-use.rs:257:5
   |
LL |     q.r.f.x = 10;
   |     ^^^^^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `q` isn't fully initialized
  --> $DIR/issue-21232-partial-init-and-use.rs:257:5
   |
LL |     let q: Q<S<B>>;
   |         - binding declared here but left uninitialized
LL |     q.r.f.x = 10;
   |     ^^^^^^^^^^^^ `q.r.f` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/issue-21232-partial-init-and-use.rs:264:5
   |
LL |     q.r.f.0 = 10;
   |     ^^^^^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `q` isn't fully initialized
  --> $DIR/issue-21232-partial-init-and-use.rs:264:5
   |
LL |     let q: Q<T>;
   |         - binding declared here but left uninitialized
LL |     q.r.f.0 = 10;
   |     ^^^^^^^^^^^^ `q.r.f` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0382]: assign to part of moved value: `q.r`
  --> $DIR/issue-21232-partial-init-and-use.rs:272:5
   |
LL |     drop(q.r);
   |          --- value moved here
LL |     q.r.f.x = 10;
   |     ^^^^^^^^^^^^ value partially assigned here after move
   |
   = note: move occurs because `q.r` has type `R<S<Box<u32>>>`, which does not implement the `Copy` trait

error[E0382]: assign to part of moved value: `q.r`
  --> $DIR/issue-21232-partial-init-and-use.rs:280:5
   |
LL |     drop(q.r);
   |          --- value moved here
LL |     q.r.f.0 = 10;
   |     ^^^^^^^^^^^^ value partially assigned here after move
   |
   = note: move occurs because `q.r` has type `R<(u32, Box<u32>)>`, which does not implement the `Copy` trait

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/issue-21232-partial-init-and-use.rs:287:5
   |
LL |     q.r.f.x = 10;
   |     ^^^^^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `q` isn't fully initialized
  --> $DIR/issue-21232-partial-init-and-use.rs:287:5
   |
LL |     let mut q: Q<S<Void>>;
   |         ----- binding declared here but left uninitialized
LL |     q.r.f.x = 10;
   |     ^^^^^^^^^^^^ `q.r.f` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/issue-21232-partial-init-and-use.rs:294:5
   |
LL |     q.r.f.0 = 10;
   |     ^^^^^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `q` isn't fully initialized
  --> $DIR/issue-21232-partial-init-and-use.rs:294:5
   |
LL |     let mut q: Q<Tvoid>;
   |         ----- binding declared here but left uninitialized
LL |     q.r.f.0 = 10;
   |     ^^^^^^^^^^^^ `q.r.f` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0382]: assign to part of moved value: `c`
  --> $DIR/issue-21232-partial-init-and-use.rs:312:13
   |
LL |     let mut c = (1, "".to_owned());
   |         ----- move occurs because `c` has type `(i32, String)`, which does not implement the `Copy` trait
LL |     match c {
LL |         c2 => {
   |         -- value moved here
LL |             c.0 = 2;
   |             ^^^^^^^ value partially assigned here after move
   |
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         ref c2 => {
   |         +++

error[E0382]: assign to part of moved value: `c`
  --> $DIR/issue-21232-partial-init-and-use.rs:322:13
   |
LL |     let mut c = (1, (1, "".to_owned()));
   |         ----- move occurs because `c` has type `(i32, (i32, String))`, which does not implement the `Copy` trait
LL |     match c {
LL |         c2 => {
   |         -- value moved here
LL |             (c.1).0 = 2;
   |             ^^^^^^^^^^^ value partially assigned here after move
   |
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         ref c2 => {
   |         +++

error[E0382]: assign to part of moved value: `c.1`
  --> $DIR/issue-21232-partial-init-and-use.rs:330:13
   |
LL |         c2 => {
   |         -- value moved here
LL |             ((c.1).1).0 = 3;
   |             ^^^^^^^^^^^^^^^ value partially assigned here after move
   |
   = note: move occurs because `c.1` has type `(i32, (i32, String))`, which does not implement the `Copy` trait
help: borrow this binding in the pattern to avoid moving the value
   |
LL |         ref c2 => {
   |         +++

error: aborting due to 35 previous errors

Some errors have detailed explanations: E0381, E0382, E0658.
For more information about an error, try `rustc --explain E0381`.
